--- a/src/components/Form/style.css
+++ b/src/components/Form/style.css
@@ -32,15 +32,19 @@
   color: white;
   background-color: var(--black-a5);
   box-shadow: 0 0 0 1px var(--black-a9);
+  border: 1px solid #ff3366;
 }
+
 .Input:hover,
 .Textarea:hover {
-  box-shadow: 0 0 0 1px black;
+  box-shadow: 0 0 0 1px rgb(189, 186, 186);
 }
+
 .Input:focus,
 .Textarea:focus {
-  box-shadow: 0 0 0 2px black;
+  box-shadow: 0 0 0 2px rgb(188, 188, 188);
 }
+
 .Input::selection,
 .Textarea::selection {
   background-color: var(--black-a9);
@@ -74,9 +78,11 @@
   color: var(--violet-11);
   box-shadow: 0 2px 10px var(--black-a7);
 }
+
 .Button:hover {
   background-color: var(--mauve-3);
 }
+
 .Button:focus {
   box-shadow: 0 0 0 2px black;
 }
