feat[frontend]:apply CoursePlayer

--- a/src/components/Main/Intro.module.css
+++ b/src/components/Main/Intro.module.css
@@ -93,6 +93,9 @@ padding-top: 5%;
        .intro-container{
                padding: 0 0%;
        }
+       .leftside-image{
+        display: none;
+       }
        .left-container{
                flex-direction: column   ;
                align-items: center;
