--- a/src/styles/applyInstructor.css
+++ b/src/styles/applyInstructor.css
@@ -1,4 +1,3 @@
-
 .instructorApply {
   display: flex;
   flex-direction: column;
@@ -62,14 +61,14 @@
     justify-content: center;
     align-items: center;
   }
-    .applybtnForm {
-        display: flex;
-        gap: 1rem;
-        justify-content: flex-end
-    }
+  .applybtnForm {
+    display: flex;
+    gap: 1rem;
+    justify-content: flex-end;
+  }
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) {
   h3 {
     font-size: 24px !important;
   }
