--- a/src/components/Main/Intro.module.css
+++ b/src/components/Main/Intro.module.css
@@ -6,6 +6,7 @@
   padding: 0 10%;
   margin-top: 4%;
   height: 70vh;
+ background-color: transparent;
 }
 
 .left-container {
@@ -65,21 +66,24 @@
 @media screen and (max-width: 1500px) {
   .intro-container {
     height: 100%;
-    flex-direction: column;
+    flex-direction: row;
+  }
+  .left-container {
+    width: 60%;
   }
 }
-@media screen and (max-width: 1090px) {
+@media screen and (max-width: 1276px) {
   .intro-container {
     height: 100%;
     flex-direction: column;
-    align-items: start;
+    align-items: center;
     padding: 0 11%;
   }
   .right-container {
     width: 80%;
   }
   .left-container {
-    width: 100%;
+    width: 80%;
   }
 }
 @media screen and (max-width: 840px) {
